--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.3",
         "aws/aws-sdk-php": "^3.158",
         "barryvdh/laravel-debugbar": "^3.5",
+        "doctrine/dbal": "^2.0",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
