Added region locking settings for profiles

--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,5 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+IPAPI_ACCESS_KEY=ad8f9061c37563c161de0da2a04bfb62
